# facti

./: .editorconfig  .envrc  .gitignore  AUTHORS  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  flake.nix  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: audit.yml  docs.yml  lint.yml  publish.yml  release.yml  test.yml
crates/api/: CHANGELOG.md  Cargo.toml  README.md
crates/api/src/: async.rs  blocking.rs  client.rs  data.rs  detail.rs  error.rs  lib.rs  portal.rs  publish.rs  reqwest.rs  upload.rs
crates/api/src/async/: client.rs  error.rs  reqwest.rs
crates/api/src/blocking/: client.rs  error.rs  reqwest.rs
crates/api/src/data/: detail.rs  game.rs  image.rs  pagination.rs  portal.rs  publish.rs  sorting.rs  upload.rs
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: cli.rs  config.rs  dirs.rs  lib.rs  logging.rs  main.rs  project.rs  vcs.rs
crates/cli/src/cli/: changelog.rs  completion.rs  dist.rs  new.rs  portal.rs  verbose.rs
crates/cli/src/cli/portal/: images.rs
crates/cli/src/vcs/: git.rs
crates/lib/: CHANGELOG.md  Cargo.toml  README.md
crates/lib/src/: builder.rs  changelog.rs  dependency.rs  error.rs  lib.rs  modinfo.rs  parse.rs  semver.rs  serde.rs  serialization.rs  version.rs
crates/lib/src/changelog/: grammar.pest
crates/lib/src/version/: factorio_version.rs
crates/lib/tests/: parsing.rs
crates/lib/tests/parsing/: changelog.txt  colon_in_heading.txt  minimal.txt  multi_section.txt  small.txt  wrong_section_order.txt
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: facti_redirect.html
nix/: devshell.nix  package.nix  treefmt.nix
pandoc/: changelog_template.html
pkg/arch/: .gitignore
pkg/arch/git/: .SRCINFO  PKGBUILD
pkg/arch/src/: .SRCINFO  PKGBUILD
site/: go.mod  go.sum  hugo.toml  index.html  style.css
site/changelogs/: index.html
site/content/: _index.md
site/content/changelogs/: _index.md  api.md  cli.md  lib.md
site/layouts/_default/: baseof.html  list.html  single.html
site/layouts/partials/: contents.html  footer.html  head.html  header.html  menu.html
site/layouts/shortcodes/: readfile.html
site/sources/: api_changelog.md  cli_changelog.md  lib_changelog.md
site/static/: style.css
site/static/schemas/: info.json
src/: factorio.rs  lib.rs  main.rs
src/factorio/: api.rs  builder.rs  dependency.rs  display.rs  modinfo.rs  parse.rs  semver.rs  serialization.rs  version.rs
src/factorio/api/: image.rs  portal.rs  publish.rs  upload.rs
xtask/: Cargo.toml
