[package]
name = "facti"
version = "0.1.0"
authors = ["Adam Hellberg <sharparam@sharparm.com>"]
edition = "2021"
description = "Factorio mod tool"
homepage = "https://github.com/Sharparam/facti"
repository = "https://github.com/Sharparam/facti"
license = "MPL-2.0"
keywords = ["factorio"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"] }
regex = "1.9.3"
reqwest = { version = "0.11.18", features = ["blocking", "json", "multipart"] }
semver = "1.0.18"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.44"
url = { version = "2.4.0", features = ["serde"] }
