[workspace]
members = ["crates/lib", "crates/api", "crates/cli", "xtask"]
resolver = "2"

[workspace.package]
authors = ["Adam Hellberg <sharparam@sharparam.com>"]
edition = "2021"
homepage = "https://facti.rs"
repository = "https://github.com/Sharparam/facti"
license = "MPL-2.0"
keywords = ["factorio"]

[workspace.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "Release {{crate_name}} version {{version}}"
tag-prefix = "{{crate_name}}/"
publish = false
