[package]
name = "xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Build tasks for Facti"
repository.workspace = true
license.workspace = true
publish = false

[package.metadata.release]
release = false

[dependencies]
anyhow = "1.0.74"
clap = { version = "4.3.21", features = ["derive", "string"] }
clap_mangen = "0.2.12"
facti = { version = "0.2.3", path = "../crates/cli" }
