[package]
name = "facti-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Provides tools for interacting with Factorio REST APIs"
homepage.workspace = true
repository = "https://github.com/Sharparam/facti/tree/main/api"
license.workspace = true
keywords = ["factorio"]
categories = ["api-bindings"]

[features]
default = ["async"]
async = ["dep:async-trait", "dep:mime_guess"]
blocking = ["reqwest/blocking"]

[dependencies]
async-trait = { version = "0.1.73", optional = true }
chrono = { version = "0.4.26", default-features = false, features = [
  "std",
  "serde"
] }
facti-lib = { version = "0.1.0", path = "../lib" }
mime_guess = { version = "2.0.4", optional = true }
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.44"
tracing = "0.1.37"
url = { version = "2.4.0", features = ["serde"] }
