[package]
name = "facti-api"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
description = "Provides tools for interacting with Factorio REST APIs"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["factorio"]
categories = ["api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["async"]
async = ["dep:async-trait", "dep:mime_guess"]
blocking = ["reqwest/blocking"]

[dependencies]
async-trait = { version = "0.1.83", optional = true }
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "serde"
] }
facti-lib = { version = "0.2.1", path = "../lib" }
mime_guess = { version = "2.0.5", optional = true }
reqwest = { version = "0.12.8", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls"
] }
scraper = { version = "0.20.0", default-features = false, features = [
    "errors"
] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.6"
tracing = "0.1.40"
url = { version = "2.5.2", features = ["serde"] }
