[package]
name = "facti"
version = "0.2.3"
authors.workspace = true
edition.workspace = true
description = "Factorio mod tool"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"

[features]
ron = ["dep:ron"]
sexpr = ["dep:serde-lexpr"]
yaml = ["dep:serde_yaml"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive", "env"] }
clap_complete = "4.3.2"
etcetera = "0.8.0"
facti-api = { version = "0.2.0", path = "../api", default-features = false, features = [
    "blocking"
] }
facti-lib = { version = "0.2.1", path = "../lib" }
git2 = { version = "0.18.0", default-features = false }
human-panic = "1.1.5"
ignore = "0.4.20"
indoc = "2.0.3"
ron = { version = "0.8.1", optional = true }
rpassword = "7.2.0"
serde = "1.0.185"
serde-lexpr = { version = "0.1.3", optional = true }
serde_json = "1.0.105"
serde_yaml = { version = "0.9.25", optional = true }
toml = "0.7.6"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
url = { version = "2.4.0", features = ["serde"] }
zip = { version = "0.6.6", default-features = false, features = [
    "deflate",
    "time"
] }
