[package]
name = "facti"
version = "0.2.3"
authors.workspace = true
edition.workspace = true
description = "Factorio mod tool"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"

[features]
ron = ["dep:ron"]
sexpr = ["dep:serde-lexpr"]
yaml = ["dep:serde_yaml"]

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive", "env"] }
clap_complete = "4.5.42"
etcetera = "0.8.0"
facti-api = { version = "0.2.0", path = "../api", default-features = false, features = [
    "blocking"
] }
facti-lib = { version = "0.2.1", path = "../lib" }
git2 = { version = "0.19.0", default-features = false }
human-panic = "2.0.2"
ignore = "0.4.23"
indoc = "2.0.5"
ron = { version = "0.8.1", optional = true }
rpassword = "7.3.1"
serde = "1.0.211"
serde-lexpr = { version = "0.1.3", optional = true }
serde_json = "1.0.132"
serde_yaml = { version = "0.9.33", optional = true }
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
url = { version = "2.5.2", features = ["serde"] }
zip = { version = "2.2.0", default-features = false, features = [
    "deflate",
    "time"
] }
