[package]
name = "facti"
version = "0.2.3"
authors.workspace = true
edition.workspace = true
description = "Factorio mod tool"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]
default-run = "facti"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"

[features]
ron = ["dep:ron"]
sexpr = ["dep:serde-lexpr"]
yaml = ["dep:serde_yaml"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.5"
etcetera = "0.11.0"
facti-api = { version = "0.2.0", path = "../api", default-features = false, features = [
    "blocking"
] }
facti-lib = { version = "0.2.1", path = "../lib" }
git2 = { version = "0.21.0", default-features = false }
human-panic = "2.0.8"
ignore = "0.4.25"
indoc = "2.0.7"
ron = { version = "0.12.1", optional = true }
rpassword = "7.5.3"
serde = "1.0.228"
serde-lexpr = { version = "0.1.3", optional = true }
serde_json = "1.0.149"
serde_yaml = { version = "0.9.33", optional = true }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
url = { version = "2.5.8", features = ["serde"] }
zip = { version = "8.6.0", default-features = false, features = [
    "deflate",
    "time"
] }
