[package]
name = "facti-lib"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
description = "Facti common library"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["factorio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
pest = "2.7.2"
pest_derive = "2.7.2"
regex = "1.9.3"
semver = "1.0.18"
serde = { version = "1.0.185", features = ["derive"] }
thiserror = "1.0.44"
tracing = "0.1.37"
url = { version = "2.4.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.104"
