[package]
name = "facti-lib"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
description = "Facti common library"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["factorio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
pest = "2.7.14"
pest_derive = "2.7.14"
regex = "1.11.0"
semver = "1.0.23"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "1.0.64"
tracing = "0.1.40"
url = { version = "2.5.2", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.132"
