[package]
name = "facti-lib"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
description = "Facti common library"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["factorio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
pest = "2.8.6"
pest_derive = "2.8.6"
regex = "1.12.3"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.150"
