[package]
name = "xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Build tasks for Facti"
repository.workspace = true
license.workspace = true
publish = false

[package.metadata.release]
release = false
pre-release-replacements = []

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive", "env", "string"] }
clap_mangen = "0.2.12"
facti = { version = "0.2.3", path = "../cli" }
xshell = "0.2.5"
